fixed textarea dark mode

--- a/src/app/shared/components/textarea/textarea.component.scss
+++ b/src/app/shared/components/textarea/textarea.component.scss
@@ -7,64 +7,42 @@
 		width: 100%;
 		font-family: Ubuntu, sans-serif !important;
 
-		.mat-form-field-flex {
-			background-color: transparent !important;
-			padding-left: 0;
-			padding-top: 0;
-			padding-right: 0;
-		}
-		.mat-input-element {
-			outline: 1px solid colors.$bordered-gray;
-		}
-
-		.mat-input-element:hover {
-			outline: 2px solid colors.$bordered-gray;
-		}
-
-		.mat-input-element:focus {
-			outline: 2px solid #3F51B5;
-		}
-
-		.mat-form-field-subscript-wrapper {
-			padding-left: 0;
-			padding-right: 0;
-			margin-top: 4px;
-		}
-
-		.mat-form-field-underline::before {
-			height: 0;
-		}
-
-		.mat-form-field-ripple {
-			height: 0;
-		 }
-
-		.mat-form-field-label {
-			margin-left: 8px;
-			margin-top: 8px;
-			color: var(--text-default);
-		}
-
-		.mat-textarea {
-			width: calc(100% - 18px);
-		}
-
-		.mat-textarea::placeholder {
-			color: var(--text-default) !important;
-		}
-
 		.mat-form-field-infix {
-			padding-top: 12px;
-			padding-bottom: 5px;
+			padding: 0;
 		}
 
 		.mat-form-field-label-wrapper {
-			top: 0;
+			top: -1.1em !important;
 		}
 
-		&.mat-form-field-should-float {
-			.mat-form-field-label-wrapper {
-				transform: translateY(-22px) translatex(-8px);
+		.mat-form-field-outline {
+		color: colors.$bordered-gray !important;
+		}
+
+		.mat-form-field-outline-thick {
+			color: colors.$academic-blue !important;
+		}
+
+		.mat-form-field-outline-start,
+		.mat-form-field-outline-end {
+			border-radius: 0;
+		}
+	}
+
+	.dark {
+		&.mat-form-field:not(.mat-focused) {
+			::ng-deep .mat-form-field-label {
+				color: colors.$bordered-gray !important;
+			}
+		}
+
+		&.mat-form-field {
+			::ng-deep .mat-hint {
+				color: colors.$light-gray;
+			}
+
+			::ng-deep .mat-textarea::placeholder {
+				color: colors.$light-gray !important;
 			}
 		}
 	}
